notebooks: added a new spn_cwis_srl notebook

--- a/notebooks/10-spn_cwis_srl.ipynb
+++ b/notebooks/10-spn_cwis_srl.ipynb
@@ -1363,7 +1363,172 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 61%|██████    | 3114/5099 [00:04<00:02, 667.29it/s]"
+      "100%|██████████| 5099/5099 [00:07<00:00, 660.54it/s]\n",
+      "  1%|▏         | 72/5099 [00:00<00:06, 719.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  3  acc:  0.456664809387\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 709.93it/s]\n",
+      "  1%|▏         | 73/5099 [00:00<00:06, 722.86it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  4  acc:  0.458925846072\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 724.52it/s]\n",
+      "  1%|          | 58/5099 [00:00<00:08, 577.81it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  5  acc:  0.460548947407\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 668.11it/s]\n",
+      "  1%|          | 61/5099 [00:00<00:08, 607.85it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  6  acc:  0.462349701624\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 711.18it/s]\n",
+      "  1%|          | 49/5099 [00:00<00:10, 485.86it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  7  acc:  0.459919087187\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 719.55it/s]\n",
+      "  1%|▏         | 73/5099 [00:00<00:06, 723.05it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  8  acc:  0.462939186188\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 680.99it/s]\n",
+      "  1%|▏         | 64/5099 [00:00<00:07, 637.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  9  acc:  0.463076463416\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 722.17it/s]\n",
+      "  1%|▏         | 67/5099 [00:00<00:07, 664.96it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  10  acc:  0.463383318394\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:07<00:00, 657.84it/s]\n",
+      "  1%|▏         | 72/5099 [00:00<00:07, 715.44it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  11  acc:  0.464045479138\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:08<00:00, 598.64it/s]\n",
+      "  1%|          | 35/5099 [00:00<00:14, 341.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  12  acc:  0.464263507675\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5099/5099 [00:09<00:00, 515.96it/s]\n",
+      "  1%|▏         | 70/5099 [00:00<00:07, 690.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch  13  acc:  0.466823324208\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 93%|█████████▎| 4730/5099 [00:06<00:00, 688.55it/s]"
      ]
     }
    ],
@@ -1397,15 +1562,6 @@
     "\n",
     "    print('epoch ', i, ' acc: ', 1 - total_err/total_size)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
