notebooks: updated spn cwis srl

--- a/notebooks/10-spn_cwis_srl.ipynb
+++ b/notebooks/10-spn_cwis_srl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "32               33          1                 560  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -665,12 +665,14 @@
     "# FOR TEXTUAL DATA ONLY\n",
     "lex2tok = propbank_encoder.lex2tok\n",
     "tok2idx = propbank_encoder.tok2idx\n",
-    "embeddings = propbank_encoder.embeddings"
+    "embeddings = propbank_encoder.embeddings\n",
+    "\n",
+    "n_targets = len(lex2idx['T'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -781,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -903,35 +905,60 @@
     "    return start_, finish_\n",
     "            \n",
     "\n",
-    "def get_outputs(db1, propid):\n",
+    "# def get_outputs(db1, propid):\n",
+    "#     ''' Generate outputs\n",
+    "#     '''\n",
+    "#     propdb_ = db1[propid] # nested dict of columns and idx value\n",
+    "#     plen_ = len(propdb_['ID'])\n",
+    "#     if 'OUTPUTS' not in propdb_: \n",
+    "#         propdb_['OUTPUTS'] = propdb_['T'].reshape((plen_,))\n",
+    "\n",
+    "#     return propdb_['OUTPUTS']\n",
+    "\n",
+    "def get_outputs(db1, propid, n_targets):\n",
     "    ''' Generate outputs\n",
     "    '''\n",
-    "    propdb_ = db1[propid] # nested dict of columns and idx value\n",
-    "    plen_ = len(propdb_['ID'])\n",
-    "    if 'OUTPUTS' not in propdb_: \n",
-    "        propdb_['OUTPUTS'] = propdb_['T'].reshape((plen_,))\n",
+    "    propdb = db1[propid] # nested dict of columns and idx value\n",
+    "    if 'OUTPUTS' not in propdb: \n",
+    "        # FIX THIS!!!\n",
+    "        chunk_list = zip(propdb['CHUNK_CANDIDATE_ID'].values(), \n",
+    "                         propdb['T'].values())\n",
+    "        chunk_list = list(set(chunk_list))\n",
     "\n",
-    "    return propdb_['OUTPUTS']"
+    "        propdb['OUTPUTS'] = [ i * n_targets + j for i, j in chunk_list]\n",
+    "\n",
+    "    return propdb['OUTPUTS']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.08 µs ± 27.9 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-c6e8898ad92d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'timeit'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'propid = 1120\\nword, ctx_p_left, ctx_p0, ctx_p_right, marker, pos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1, propid)\\ny = get_outputs(prop_dict1, propid, n_targets)\\n# worst proposition 1120 size 92!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda/envs/tensorflow/lib/python3.6/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2101\u001b[0m             \u001b[0mmagic_arg_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar_expand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2102\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2103\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2104\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<decorator-gen-61>\u001b[0m in \u001b[0;36mtimeit\u001b[0;34m(self, line, cell)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/tensorflow/lib/python3.6/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    185\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/tensorflow/lib/python3.6/site-packages/IPython/core/magics/execution.py\u001b[0m in \u001b[0;36mtimeit\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m   1078\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1079\u001b[0m                 \u001b[0mnumber\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1080\u001b[0;31m                 \u001b[0mtime_number\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1081\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mtime_number\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1082\u001b[0m                     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/tensorflow/lib/python3.6/site-packages/IPython/core/magics/execution.py\u001b[0m in \u001b[0;36mtimeit\u001b[0;34m(self, number)\u001b[0m\n\u001b[1;32m    158\u001b[0m         \u001b[0mgc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 160\u001b[0;31m             \u001b[0mtiming\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    161\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mgcold\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<magic-timeit>\u001b[0m in \u001b[0;36minner\u001b[0;34m(_it, _timer)\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-910f6f7e4a3f>\u001b[0m in \u001b[0;36mget_outputs\u001b[0;34m(db1, propid, n_targets)\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0mpropdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpropid\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# nested dict of columns and idx value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m'OUTPUTS'\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpropdb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m         chunk_list = zip(propdb['CHUNK_CANDIDATE_ID'].values(), \n\u001b[0m\u001b[1;32m     52\u001b[0m                          propdb['T'].values())\n\u001b[1;32m     53\u001b[0m         \u001b[0mchunk_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'values'"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "propid = 1119\n",
+    "propid = 1120\n",
     "word, ctx_p_left, ctx_p0, ctx_p_right, marker, pos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1, propid)\n",
-    "y = get_outputs(prop_dict1, propid)\n",
+    "y = get_outputs(prop_dict1, propid, n_targets)\n",
     "# worst proposition 1120 size 92!"
    ]
   },
@@ -944,34 +971,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(33,)\n",
       "[ 0  1  1  1 35  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2  2\n",
-      "  2  2  2  2  2  2  2  0]\n"
+      "  2  2  2  2  2  2  2  0]\n",
+      "[(array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1])), (array([0]), array([1]))]\n",
+      "[(0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1), (0, 1)]\n"
      ]
     }
    ],
    "source": [
     "propid = 1\n",
     "word, ctx_p_left, ctx_p0, ctx_p_right, marker, pos, chunk_type, chunk_start, chunk_finish = get_inputs(prop_dict1,  propid)\n",
-    "y = get_outputs(prop_dict1, propid)\n",
-    "print(y.shape)\n",
+    "y = get_outputs(prop_dict1, propid, n_targets)\n",
+    "# proplen = proplen_dict[propid]\n",
+    "# y = y.reshape((proplen,1))\n",
     "print(y)\n",
-    "# _start  = np.repeat(chunk_start, len(lex2idx['T']))\n",
-    "# _finish = np.repeat(chunk_finish, len(lex2idx['T']))\n",
-    "# print([(_start[y_].flatten(), _finish[y_].flatten()) for y_ in y])\n",
-    "# print(list(zip(_start[y].flatten(), _finish[y].flatten())))\n"
+    "_start  = np.repeat(chunk_start, n_targets)\n",
+    "_finish = np.repeat(chunk_finish, n_targets)\n",
+    "print([(_start[y_].flatten(), _finish[y_].flatten()) for y_ in y])\n",
+    "print(list(zip(_start[y].flatten(), _finish[y].flatten())))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1172,7 +1201,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# índices dos intervalos computados pelo Weighted Interval Scheduling\n",
