notebooks: spn cwis cost_op testing

--- a/notebooks/10-spn_cwis_srl.ipynb
+++ b/notebooks/10-spn_cwis_srl.ipynb
@@ -1164,7 +1164,7 @@
     "scores_diff = scores_flat - scores_mean\n",
     "\n",
     "scores_std = tf.sqrt(tf.reduce_sum(scores_diff * scores_diff))\n",
-    "predict_op = scores_diff /( scores_std + 1e-8 )\n",
+    "scores_op = scores_diff /( scores_std + 1e-8 )\n",
     "\n",
     "\n",
     "# a partir das features do intervalo computamos o score\n",
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1215,28 +1215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def pred(sess, x_words, x_ctx_p_left, x_ctx_p0, x_ctx_p_right, x_marker, x_pos, chunk_start, chunk_end):\n",
-    "    result = sess.run(predict_op,feed_dict={\n",
+    "def pred(sess, x_words, x_ctx_p_left, x_ctx_p0, x_ctx_p_right, x_marker, x_pos, x_chunk_start, x_chunk_finish):\n",
+    "    scores = sess.run(scores_op,feed_dict={\n",
     "        X_words: x_words,\n",
     "        X_ctx_p_left: x_ctx_p_left,\n",
     "        X_ctx_p: x_ctx_p0,\n",
     "        X_ctx_p_right: x_ctx_p_right,        \n",
     "        X_marker: x_marker,                \n",
     "        X_pos:x_pos,\n",
-    "        i_s: chunk_start,\n",
-    "        i_f: chunk_finish\n",
+    "        i_s: x_chunk_start,\n",
+    "        i_f: x_chunk_finish\n",
     "    })\n",
-    "    starts = np.repeat(ck_start, n_classes).reshape((-1,1))\n",
-    "    ends = np.repeat(ck_end, n_classes).reshape((-1,1))\n",
+    "    starts = np.repeat(x_chunk_start, n_classes).reshape((-1,1))\n",
+    "    ends = np.repeat(x_chunk_finish, n_classes).reshape((-1,1))\n",
     "    \n",
-    "    m = len(ck_start)\n",
-    "    colors = np.array(list(np.arange(n_classes))*m)\n",
+    "    ck_len = len(x_chunk_start)\n",
+    "    colors = np.array(list(np.arange(n_classes))*ck_len)\n",
     "    \n",
     "    r_int = cwis.compute_schedule(starts.flatten(), ends.flatten(), scores, colors) \n",
     "    r_ext = list(zip(starts[r_int].flatten(),ends[r_int].flatten(), colors[r_int].flatten()))\n",
@@ -1244,28 +1244,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20168 20120 20008 19844 19664 19448 19222 18908 18584 18235 17839 17396\n",
+      " 16928 16444 15884 15308 14707 14059 13364 12644 11914 11107 10268  9415\n",
+      "  8530  7594  6596  5588  4564  3464  2348  1216     8]\n",
+      "[(32, 33, 8), (31, 32, 32), (30, 31, 28), (29, 30, 8), (28, 29, 8), (27, 28, 8), (26, 27, 34), (25, 26, 8), (24, 25, 8), (23, 24, 19), (22, 23, 19), (21, 22, 8), (20, 21, 8), (19, 20, 28), (18, 19, 8), (17, 18, 8), (16, 17, 19), (15, 16, 19), (14, 15, 8), (13, 14, 8), (12, 13, 34), (11, 12, 19), (10, 11, 8), (9, 10, 19), (8, 9, 34), (7, 8, 34), (6, 7, 8), (5, 6, 8), (4, 5, 28), (3, 4, 8), (2, 3, 8), (1, 2, 28), (0, 1, 8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "p, pe = pred(sess, words, ctx_p_left, ctx_p0, ctx_p_right, marker, gpos, chunk_start, chunk_finish)\n",
+    "print(p)\n",
+    "print(pe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# índices dos intervalos computados pelo Weighted Interval Scheduling\n",
-    "Y = tf.placeholder(tf.int32, shape=(None,), name='predictions')\n",
+    "# t_y_int = tf.placeholder(tf.int32, shape=(None,))\n",
+    "# t_y_rshp = tf.reshape(t_y_int, (-1,1))\n",
+    "# t_margin_int = tf.placeholder(tf.float32, shape=())\n",
     "\n",
-    "# índices dos intervalos corretos\n",
+    "# t_margin_values = tf.ones(tf.shape(t_y_rshp))*t_margin_int\n",
+    "# t_margin_scores = tf.scatter_nd(t_y_rshp, -t_margin_values, tf.shape(t_scores_flat))\n",
+    "# t_scores_flat_w_margin = t_scores_flat + t_margin_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# indices of the correct intervals\n",
     "T = tf.placeholder(tf.int32, shape=(None,), name='T')\n",
     "L = tf.placeholder(tf.int32, shape=(), name='L')\n",
     "I = tf.to_int32(tf.range(L), name='indices')\n",
     "\n",
+    "T_flat = tf.reshape(T, (-1,1), name='T_flat')\n",
+    "Margin_interval = tf.placeholder(tf.float32)\n",
+    "Margin_values = tf.ones(tf.shape(T_flat)) * Margin_interval\n",
+    "Margin_scores_flat = tf.scatter_nd(T_flat, -Margin_values, tf.shape(scores_op))\n",
+    "Scores_flat_with_margin = scores_op + Margin_scores_flat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# # índices dos intervalos computados pelo Weighted Interval Scheduling\n",
+    "# t_p_int = tf.placeholder(tf.int32, shape=(None,))\n",
+    "# # índices dos intervalos corretos\n",
+    "# # t_y_int = tf.placeholder(tf.int32, shape=(None,))\n",
+    "\n",
+    "# # formatamos os indices dos intervalos preditos e corretos\n",
+    "# t_p_rshp = tf.reshape(t_p_int,(-1,1))\n",
+    "# # t_y_rshp = tf.reshape(t_y_int,(-1,1))\n",
+    "\n",
+    "# # score dos intervalos preditos\n",
+    "# t_scores_int_p = tf.gather_nd(t_scores_flat_w_margin, t_p_rshp)\n",
+    "# # score dos intervalos corretos\n",
+    "# t_scores_int_y = tf.gather_nd(t_scores_flat_w_margin, t_y_rshp)\n",
+    "\n",
+    "# ## função de custo do perceptron estruturado\n",
+    "# # WIS\n",
+    "# t_cost_int = tf.reduce_sum(t_scores_int_p) - tf.reduce_sum(t_scores_int_y)\n",
+    "# t_cost = t_cost_int\n",
+    "\n",
+    "# # # gradiente descendente no custo do perceptron estruturado\n",
+    "# optimizer = tf.train.AdamOptimizer(learning_rate=0.001)\n",
+    "# # optimizer = tf.train.GradientDescentOptimizer(0.003)\n",
+    "# train = optimizer.minimize(t_cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# indices containing the predicted labels from Weighted Interval Scheduling\n",
+    "Y = tf.placeholder(tf.int32, shape=(None,), name='predictions')\n",
+    "Y_flat = tf.reshape(Y, (-1, 1))\n",
+    "\n",
     "# score da estrutura predita\n",
-    "ScoreY = tf.gather_nd(score_op, tf.stack((I, Y), -1), name='predicted_score')\n",
+    "ScoreY = tf.gather_nd(Scores_flat_with_margin, Y_flat, name='predicted_score')\n",
     "# score da estrutura correta\n",
-    "ScoreT = tf.gather_nd(score_op, tf.stack((I, T), -1), name='target_score')\n",
+    "ScoreT = tf.gather_nd(Scores_flat_with_margin, T_flat, name='target_score')\n",
     "\n",
     "# função de custo do perceptron estruturado\n",
-    "cost_op = tf.reduce_sum(ScoreY) - tf.reduce_sum(ScoreT)\n",
+    "# cost_op = tf.reduce_sum(ScoreY) - tf.reduce_sum(ScoreT)\n",
+    "# t_cost_int = tf.reduce_sum(t_scores_int_p) - tf.reduce_sum(t_scores_int_y)\n",
+    "# t_cost = t_cost_int\n",
     "\n",
     "# gradiente descendente no custo do perceptron estruturado\n",
     "optimizer = tf.train.GradientDescentOptimizer(0.01)\n",
