notebooks: conll evaluatuon

--- a/notebooks/10-spn_cwis_srl.ipynb
+++ b/notebooks/10-spn_cwis_srl.ipynb
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,8 +1765,9 @@
     "\n",
     "    n_words = len(words)\n",
     "    pred_array = prop_dict[propid]['PRED']\n",
-    "    pred_list = [idx2lex['PRED'][i] for i in list(pred_array)]\n",
-    "\n",
+    "    pred_array = pred_array.flatten()\n",
+    "    \n",
+    "    pred_list = [idx2lex['PRED'][i] for i in pred_array.tolist()]\n",
     "    arg_list = []\n",
     "    for triple_ in sorted(chunk_ext, key= lambda x: x[0]):\n",
     "        lb, ub, arg = triple_            \n",
@@ -1777,8 +1778,6 @@
     "\n",
     "        arg_list += chunk_list\n",
     "        \n",
-    "    print(pred_list)\n",
-    "    print(arg_list)\n",
     "    result_list += list(zip(pred_list, arg_list))\n",
     "    result_list.append(None)\n",
     "    return result_list"
@@ -1793,33 +1792,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'numpy.ndarray'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-0d7302e85459>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtag_to_conll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprop_dict1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx2lex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlex2idx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'T'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-78-2f70b97cafb0>\u001b[0m in \u001b[0;36mtag_to_conll\u001b[0;34m(sess, prop_dict, propid, idx2lex)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     pred_list = [idx2lex['PRED'][i]\n\u001b[0;32m---> 15\u001b[0;31m                      for i in list(pred_array)]\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0marg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-78-2f70b97cafb0>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     pred_list = [idx2lex['PRED'][i]\n\u001b[0;32m---> 15\u001b[0;31m                      for i in list(pred_array)]\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0marg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'numpy.ndarray'"
+      "['-', '-', '-', '-', 'revelar', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-']\n",
+      "['*', '(A0*', '*', '*)', '(V*)', '(A1*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*)']\n",
+      "[('-', '*'), ('-', '(A0*'), ('-', '*'), ('-', '*)'), ('revelar', '(V*)'), ('-', '(A1*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*'), ('-', '*)'), None]\n",
+      "{'*': 0, 'A0': 1, 'A1': 2, 'A2': 3, 'A3': 4, 'A4': 5, 'A5': 6, 'AM-ADV': 7, 'AM-CAU': 8, 'AM-DIR': 9, 'AM-DIS': 10, 'AM-EXT': 11, 'AM-LOC': 12, 'AM-MED': 13, 'AM-MNR': 14, 'AM-NEG': 15, 'AM-PNC': 16, 'AM-PRD': 17, 'AM-REC': 18, 'AM-TMP': 19, 'C-A0': 20, 'C-A1': 21, 'C-A2': 22, 'C-A3': 23, 'C-AM-ADV': 24, 'C-AM-CAU': 25, 'C-AM-DIS': 26, 'C-AM-EXT': 27, 'C-AM-LOC': 28, 'C-AM-MNR': 29, 'C-AM-NEG': 30, 'C-AM-PNC': 31, 'C-AM-PRD': 32, 'C-AM-TMP': 33, 'C-V': 34, 'V': 35}\n"
      ]
     }
    ],
    "source": [
-    "result = tag_to_conll(sess, prop_dict1, 1, idx2lex)\n",
-    "print(result)\n",
+    "result_list = tag_to_conll(sess, prop_dict1, 1, idx2lex)\n",
+    "print(result_list)\n",
     "print(lex2idx['T'])"
    ]
   },
